--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
@@ -250,6 +251,9 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
 
 
@@ -374,6 +378,14 @@ div.tocify {
 
 <div class="fluid-row" id="header">
 
+<div class="btn-group pull-right">
+<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
+
 
 
 <h1 class="title toc-ignore">My awesome website</h1>
@@ -389,8 +401,8 @@ div.tocify {
 <h2>Here’s a sub section</h2>
 <p>And here’s more text…</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1] -1.06783610  0.39472192 -0.01489538  1.10575116 -0.08263486 -0.45440121
-##  [7] -0.11996682  1.39770003 -0.83281123  0.03461585</code></pre>
+<pre><code>##  [1] -0.2368602 -0.4521895  0.8963237 -1.6589633 -0.4787694  0.2627890
+##  [7] -0.3836666 -0.5970983 -0.7901134 -0.2623653</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
@@ -410,6 +422,20 @@ div.tocify {
 <h2>Link to page within the site</h2>
 <p><a href="about.html">About me</a></p>
 <p>And more!</p>
+</div>
+<div id="quarterly-results" class="section level2 tabset">
+<h2>Quarterly Results</h2>
+<div id="by-product" class="section level3">
+<h3>By Product</h3>
+<p>This is tab number one!</p>
+</div>
+<div id="by-region" class="section level3">
+<h3>By Region</h3>
+<p>This is tab number two!</p>
+</div>
+</div>
+<div id="this-is-a-new-section-again" class="section level2">
+<h2>This is a new section again!</h2>
 </div>
 </div>
 
@@ -448,6 +474,11 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
 <script>
 $(document).ready(function ()  {
