plotly and dashboard

--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
+  <a href="Dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;ma3997@columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -401,8 +407,8 @@ div.tocify {
 <h2>Here’s a sub section</h2>
 <p>And here’s more text…</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1] -0.2368602 -0.4521895  0.8963237 -1.6589633 -0.4787694  0.2627890
-##  [7] -0.3836666 -0.5970983 -0.7901134 -0.2623653</code></pre>
+<pre><code>##  [1]  0.04087615  0.44120967 -0.29878439 -0.07922102 -0.88983850  0.04729777
+##  [7]  1.17234656  0.14681382  0.89663991 -0.44571937</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
