--- a/about.html
+++ b/about.html
@@ -356,6 +356,12 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
+  <a href="Dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;ma3997@columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
