--- a/about.html
+++ b/about.html
@@ -359,7 +359,7 @@ div.tocify {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
-  <a href="Dashboard.html">Dashboard</a>
+  <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
   <a href="mailto:&lt;ma3997@columbia.edu&gt;">
