--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@ div.tocify {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
-  <a href="Dashboard.html">Dashboard</a>
+  <a href="dashboard.html">Dashboard</a>
 </li>
 <li>
   <a href="mailto:&lt;ma3997@columbia.edu&gt;">
@@ -407,8 +407,8 @@ div.tocify {
 <h2>Here’s a sub section</h2>
 <p>And here’s more text…</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.04087615  0.44120967 -0.29878439 -0.07922102 -0.88983850  0.04729777
-##  [7]  1.17234656  0.14681382  0.89663991 -0.44571937</code></pre>
+<pre><code>##  [1]  0.2543630 -0.7768181  0.9151943  0.1004067  1.4085940 -0.2272465
+##  [7]  2.1594970  0.7030340  0.2087687 -1.0781706</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level2">
 <h2>Links to other websites</h2>
